test/testdata/bool/invalid_property_access_error.lox
// error: property access is not valid for 'bool' value
// lint warning: property 'x' has not been declared or assigned anywhere
true.x;
